--- a/_templates/page.html
+++ b/_templates/page.html
@@ -1,11 +1,11 @@
-{% extends "base.njk" %}
+{% extends "base.html" %}
 
 {% block body %}
 
     <div class="container">
 
     {% block content %}
-        {{ content | safe }}
+        {{ page.body | safe }}
     {% endblock %}
 
     </div>
