--- a/_templates/home.html
+++ b/_templates/home.html
@@ -1,8 +1,9 @@
-{% extends "page.html" %}
+{% extends "base.html" %}
 
 {%- set language = page.language | default(config.language) -%}
 
-{% block content %}
+{% block body %}
+  <div class="container page-content">
     {{ page.body | safe }}
 
     {# Create a list of pages from the stories folder #}
@@ -14,23 +15,12 @@
     {% endfor %}
 
     <ul>
-    {% for page in stories|sort(attribute="date", reverse=True) %}
+      {% for page in stories|sort(attribute="date", reverse=True) %}
         <li>
-            <a href="/{{ page.path }}">{{ page.title }}</a>
-            <span class="story-date">({{ page.date }})</span>
+          <a href="/{{ page.path }}">{{ page.title }}</a>
+          <span class="story-date">({{ page.date }})</span>
         </li>
-    {% endfor %}
+      {% endfor %}
     </ul>
-
-    <h2 id="contact">{{ config.contact.title[language] }}</h2>
-
-    <ul class="fa-ul">
-    {% for contact in config.contact.links %}
-        <li>
-        <i class="fa-li {{ contact.icon }}"></i>
-        <a href="{{ contact.url }}">{{ contact.text }}</a>
-        </li>
-    {% endfor %}
-    </ul>
-
+  </div>
 {% endblock %}
