Make story cards for the front page
Includes list of pages (no links right now), date, the first few words
from the story, and the banner image. Images should always be 2:1 ratio
for cards to look good.

--- a/_templates/base.html
+++ b/_templates/base.html
@@ -94,7 +94,7 @@
         </div>
       </div>
       {%- block body %}
-        <div class="container page-content">
+        <div class="container page-content narrow-page">
           {{ page.body }}
         </div>
       {%- endblock %}
