Redesign using bootstrap 5 (#6)
Simplify the templates while making nicer looking banners and
Story list. Update bootstrap and font awesome while were at it.
Co-authored-by: Ana Caroline Colombo <acarolcolombo@gmail.com>

--- a/_templates/home.html
+++ b/_templates/home.html
@@ -1,36 +1,54 @@
-{% extends "page.html" %}
+{% extends "base.html" %}
 
 {%- set language = page.language | default(config.language) -%}
 
-{% block content %}
+{% block body %}
+  <div class="container page-content">
     {{ page.body | safe }}
 
     {# Create a list of pages from the stories folder #}
-    {% set stories = [] %}
-    {% for id, page in site.items() %}
-      {% if page.parent == "stories" %}
-        {% do stories.append(page) %}
-      {% endif %}
-    {% endfor %}
+    {%- set stories = [] %}
+    {%- for id, page in site.items() %}
+      {%- if page.parent == "stories" %}
+        {%- do stories.append(page) %}
+      {%- endif %}
+    {%- endfor %}
 
-    <ul>
-    {% for page in stories|sort(attribute="date", reverse=True) %}
-        <li>
-            <a href="/{{ page.path }}">{{ page.title }}</a>
-            <span class="story-date">({{ page.date }})</span>
-        </li>
-    {% endfor %}
-    </ul>
-
-    <h2 id="contact">{{ config.contact.title[language] }}</h2>
-
-    <ul class="fa-ul">
-    {% for contact in config.contact.links %}
-        <li>
-        <i class="fa-li {{ contact.icon }}"></i>
-        <a href="{{ contact.url }}">{{ contact.text }}</a>
-        </li>
-    {% endfor %}
-    </ul>
-
+    <div class="row mt-3 gy-5 gx-5">
+      {%- for page in stories|sort(attribute="date", reverse=True) %}
+        <div class="col-sm-6 d-flex align-items-stretch">
+          <div class="card">
+            <img src="/{{ page.banner }}" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h3 class="card-title fs-5 mb-2">{{ page.title }}</h3>
+              <p class="card-text text-muted">
+                {%- if page.description is defined %}
+                  {{ page.description|striptags|trim }}
+                {%- else %}
+                  {{ page.body|striptags|truncate(100) }}
+                {%- endif %}
+              </p>
+              <a href="/{{ page.path }}" class="btn btn-secondary fs-6">Full story</a>
+            </div>
+            <div class="card-footer fs-6">
+              <p class="mb-0">
+                <i class="fa fa-tag" aria-hidden="true" title="Tags"></i>
+                <span class="hidden">Tags:</span>
+                {%- for tag in page.tags %}
+                  <a class="tag-link" href="/tags.html#{{ tag }}">{{ tag }}</a>
+                  {%- if not loop.last %},{%- endif %}
+                {%- endfor %}
+                <i class="fa fa-calendar-alt ms-2" aria-hidden="true" title="Date"></i>
+                <span class="hidden">Date:</span>
+                {{ page.date|replace("-", "/") }}
+                <i class="fa fa-clock ms-2" aria-hidden="true" title="Reading time"></i>
+                <span class="hidden">Reading time:</span>
+                {{ (page.body|striptags|wordcount / 238)|round(method="ceil")|int }} min
+              </p>
+            </div>
+          </div>
+        </div>
+      {%- endfor %}
+    </div>
+  </div>
 {% endblock %}
