Add Plausible analytics script to monitor visitors
Counts page visits without any creepy cross-site tracking and cookies.

--- a/_templates/base.html
+++ b/_templates/base.html
@@ -26,6 +26,9 @@
   <!-- Main CSS stylesheet -->
   <link rel="stylesheet" href="/css/style.css">
 
+  <!-- Plausible analytics script to gather anonymous visitor counts -->
+  <script defer data-domain="acarolcolombo.com" src="https://plausible.io/js/plausible.js"></script>
+
   {%- block extrahead %}{% endblock %}
 </head>
 
