--- a/_templates/base.html
+++ b/_templates/base.html
@@ -123,6 +123,10 @@
   <script src="/js/bootstrap-5.1/bootstrap.bundle.min.js"
     integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
     crossorigin="anonymous"></script>
+  {%- if page.article_level_metrics is defined and page.article_level_metrics %}
+    <!-- Dimensions badge -->
+    <script async src="https://badge.dimensions.ai/badge.js" charset="utf-8"></script>
+  {%- endif %}
 
 </body>
 </html>
