Make About the front-page
Move the stories list to stories/index and rename about.md to index.md.

--- a/_templates/stories-index.html
+++ b/_templates/stories-index.html
@@ -9,7 +9,7 @@
     {# Create a list of pages from the stories folder #}
     {%- set stories = [] %}
     {%- for id, page in site.items() %}
-      {%- if page.parent == "stories" %}
+      {%- if page.parent == "stories" and page.id[-5:] != "index" %}
         {%- do stories.append(page) %}
       {%- endif %}
     {%- endfor %}
